# timbre

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  analyze.py  batch_process.py  pyproject.toml  requirements.txt  setup_mac.sh  setup_runpod.sh  timbre.py
config/: config.yaml  vocabulary.yaml  vocabulary_refined.yaml
docs/: llm_search_findings.md  roadmap.mermaid  roadmap_pro.mermaid
scripts/: __init__.py  build_label_cache.py  get_size.sh  release.py  release.sh  timbre-docker.sh  upload_pod.sh  validate_clap.py
src/: __init__.py  config_loader.py  pipeline.py
src/analysis/: __init__.py  description_synthesizer.py  event_detector.py  feature_extractor.py
src/cli/: __init__.py  analyze.py  batch.py  cache.py  cache_info.py  main.py  profile.py  validate.py  validation_chain.py  vocab.py
src/ingestion/: __init__.py  audio_loader.py
src/models/: __init__.py  clap_tagger.py  label_cache.py
src/output/: __init__.py  catalog_builder.py  schema.py  serializer.py
src/timbre/: __init__.py  config_loader.py  output_paths.py  paths.py  pipeline.py  vocab_state.py
src/timbre/analysis/: __init__.py  description_synthesizer.py  event_detector.py  feature_extractor.py
src/timbre/ingestion/: __init__.py  audio_loader.py
src/timbre/models/: __init__.py  clap_tagger.py  label_cache.py
src/timbre/output/: __init__.py  catalog_builder.py  schema.py  serializer.py
tests/: conftest.py  test_cli_experiments.py  test_cli_validation_chain.py  test_config_loader.py  test_output_provenance.py  test_validate.py
